[package]
name = "rust-dht"
version = "0.1.0"
authors = ["champii <contact@champii.io>"]

[dependencies]
clap="2.32.0"
serde="1.0.71"
hex="0.3.2"
rand = "0.3.14"
serde_derive="1.0"
serde_bytes="0.10.4"
bincode="1.0.1"
log = "0.4"
env_logger = "0.5.12"
futures = "0.1.23"
sha2 = "0.7.1"
shrust = "0.0.4"

rsrpc = { path = "../rsrpc/" }

[dependencies.xor]
git = "https://github.com/zummenix/xor-rs/"

